@@ -1,4 +1,4 @@
-#   Copyright 1998, 1999, 2000
+#   Copyright 1998, 1999, 2000, 2001
 #   Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -193,7 +193,8 @@ gdb_test "tbreak 1220" \
 	"Breakpoint.* file .*$srcfile, line 1220.*" \
 	"tbreakpoint line 1220"
 
-if ![gdb_skip_stdio_test "continuing to breakpoint 1220"] {
+if {![gdb_skip_float_test "continuing to breakpoint 1220"] && \
+    ![gdb_skip_stdio_test "continuing to breakpoint 1220"] } {
     send_gdb "continue\n"
     gdb_expect_list "continuing to breakpoint 1220" ".*$gdb_prompt $" {
 	"Continuing\\."
@@ -278,7 +279,8 @@ gdb_test "tbreak 1236" \
 "Breakpoint.* file .*$srcfile, line 1236.*" \
 "tbreakpoint line 1236"
 
-if ![gdb_skip_stdio_test "continuing to 1236"] {
+if {![gdb_skip_float_test "continuing to 1236"] && \
+    ![gdb_skip_stdio_test "continuing to 1236"] } {
     send_gdb "continue\n"
     gdb_expect_list "continuing to 1236"  ".*$gdb_prompt $" {
 	"Continuing\\..*array_c"
