@@ -1,4 +1,4 @@
-# Copyright 1998, 1999, 2000 Free Software Foundation, Inc.
+# Copyright 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -173,7 +173,8 @@ if {![gdb_skip_float_test "print print_one_double(*d1)"] && \
     }
 }
 
-if ![gdb_skip_stdio_test "print print_two_floats(*f3)"] {
+if {![gdb_skip_float_test "print print_two_floats(*f3)"] && \
+    ![gdb_skip_stdio_test "print print_two_floats(*f3)"] } {
     send_gdb "print print_two_floats(*f3)\n"
     gdb_expect {
 	-re ".*Contents of two_floats_t:\[ \r\n\]+-2\\.345000\[ \t]+1\\.000000\[ \r\n\]+.\[0-9\]+ = \{float1 = -2\\.34500003, float2 = 1\}.*$gdb_prompt $" {
